--- a/src/pages/Home/VideoPage.module.css
+++ b/src/pages/Home/VideoPage.module.css
@@ -36,6 +36,10 @@
   border-bottom: 1px solid #d7d7d7;
 }
 
+.actions div {
+  cursor: pointer;
+}
+
 .channel {
   margin: 0.75rem;
   display: flex;
@@ -62,4 +66,118 @@
   font-size: 0.75rem;
   color: rgb(17, 17, 17, 0.6);
   font-weight: 500;
+}
+
+.playlist {
+  position: relative;
+}
+
+.playlistmodal {
+  position: absolute;
+  right: 0;
+  top: 1.5rem;
+  z-index: 1;
+  background-color: white;
+  border: 1px solid #d7d7d7;
+  padding: 1rem 1rem 0.25rem 1rem;
+  width: max-content;
+}
+
+.playlistmodal li {
+  list-style-type: none;
+  padding: 0.5rem 0;
+  display: flex;
+  align-items: center;
+}
+
+.playlistmodal li label {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  padding-left: 0.75rem;
+  font-size: 0.9rem;
+  width: 15ch;
+  cursor: pointer;
+}
+
+.playlistmodal li input[type='text'] {
+  padding: 0.25rem 0.5rem;
+  width: 80%;
+  max-width: 25vw;
+}
+
+.playlistmodal li input[type='checkbox'] {
+  cursor: pointer;
+}
+
+.playlistmodal li span {
+  margin-left: 0.15rem;
+  padding: 0.5rem;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 0;
+  box-shadow: none;
+  color: #272727;
+  background-color: #fff;
+  font-size: 0.85rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.playlistmodal li span:hover {
+  background-color: rgba(0, 0, 0, 0.04);
+}
+
+.closemodal {
+  margin-top: 0.75rem;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  font-size: 0.95rem;
+  font-weight: 500;
+  border-top: 1px solid #d7d7d7;
+  padding: 0.75rem 2rem;
+  color: #272727;
+  cursor: pointer;
+}
+
+.closemodal:hover {
+  background-color: rgba(0, 0, 0, 0.04);
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 120px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 0.5rem;
+  border-radius: 6px;
+  position: absolute;
+  z-index: 1;
+  bottom: 110%;
+  left: 50%;
+  margin-left: -60px;
+  font-size: 0.75rem;
+  font-weight: 500;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+.tooltip .tooltiptext::after {
+  content: ' ';
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: black transparent transparent transparent;
 }
