--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,20 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primary-color: #111111;
+  --secondary-color: #ff3f6c;
+  --white: #fff;
+  --gray: #6b7280;
+  --button-color: rgb(17, 17, 17, 0.6);
+  --border-color: #d7d7d7;
+  --card-border: rgb(229, 229, 229);
+}
+
 body {
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #f9fafb;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+  background-color: var(--white);
+  color: var(--primary-color);
 }
