--- a/src/pages/Home/components/VideoCard.module.css
+++ b/src/pages/Home/components/VideoCard.module.css
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: white;
+  background-color: var(--white);
   box-shadow: rgba(0, 0, 0, 0.15) 0 1.95px 2.6px;
   padding-bottom: 0.5rem;
 }
 
 .link {
   text-decoration: none;
-  color: black;
+  color: var(--primary-color);
 }
 
 .image {
@@ -24,7 +24,7 @@
 }
 
 .channel {
-  color: #6b7280;
+  color: var(--gray);
   font-weight: 400;
   margin: 0.5rem 0;
   font-size: 0.9rem;
