--- a/src/pages/History/components/HistoryCard.module.css
+++ b/src/pages/History/components/HistoryCard.module.css
@@ -6,7 +6,7 @@
 .historyCardContainer {
   display: flex;
   height: 100px;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .imageContainer {
@@ -20,6 +20,7 @@
 }
 
 .descriptionContainer {
+  margin-left: 1rem;
   width: 45%;
 }
 
@@ -50,6 +51,7 @@
   display: inline-block;
   height: max-content;
   padding: 0.75rem 0;
+  cursor: pointer;
 }
 
 .moreContainer {
@@ -80,4 +82,29 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.7);
   overflow: hidden;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .historyCardContainer {
+    height: 125px;
+  }
+
+  .imageContainer {
+    width: 35%;
+  }
+
+  .descriptionContainer {
+    width: 55%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .historyCardContainer {
+    height: 125px;
+  }
+
+  .imageContainer {
+    width: 200px;
+    max-width: 250px;
+  }
 }
