--- a/src/pages/Home/VideoListing.module.css
+++ b/src/pages/Home/VideoListing.module.css
@@ -5,10 +5,19 @@
   margin-bottom: 6rem;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  .container {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+    margin: 0 1rem;
+  }
+}
+
+@media screen and (min-width: 1025px) {
   .container {
     grid-template-columns: repeat(4, 1fr);
     column-gap: 1rem;
-    margin: 0 1rem;
+    margin: 2rem 1rem 2rem 14vw;
+    padding: 0 1rem;
   }
 }
