--- a/src/pages/Home/VideoPage.module.css
+++ b/src/pages/Home/VideoPage.module.css
@@ -33,7 +33,7 @@
   display: flex;
   justify-content: space-around;
   padding-bottom: 1rem;
-  border-bottom: 1px solid #d7d7d7;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .actions div {
@@ -45,7 +45,7 @@
   display: flex;
   align-items: center;
   padding-bottom: 0.5rem;
-  border-bottom: 1px solid #d7d7d7;
+  border-bottom: 1px solid var(--border-color);
 }
 
 .channelimage img {
@@ -78,7 +78,7 @@
   top: 1.5rem;
   z-index: 1;
   background-color: white;
-  border: 1px solid #d7d7d7;
+  border: 1px solid var(--border-color);
   padding: 1rem 1rem 0.25rem 1rem;
   width: max-content;
 }
@@ -135,7 +135,7 @@
   justify-content: center;
   font-size: 0.95rem;
   font-weight: 500;
-  border-top: 1px solid #d7d7d7;
+  border-top: 1px solid var(--border-color);
   padding: 0.75rem 2rem;
   color: #272727;
   cursor: pointer;
