--- a/src/pages/Playlist/components/PlaylistVideoCard.module.css
+++ b/src/pages/Playlist/components/PlaylistVideoCard.module.css
@@ -17,6 +17,7 @@
 .imageContainer {
   width: 100%;
   height: 100%;
+  cursor: pointer;
 }
 
 .image {
@@ -36,6 +37,7 @@
   font-size: 0.85rem;
   font-weight: 500;
   padding: 0.25rem 0 0.35rem;
+  cursor: pointer;
 }
 
 .descriptionContainer .channelName {
@@ -59,6 +61,7 @@
   display: inline-block;
   height: max-content;
   padding: 0.75rem 0;
+  cursor: pointer;
 }
 
 .moreContainer {
@@ -80,6 +83,7 @@
   padding: 1rem 0;
   font-size: 1rem;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .modalCloseContainer {
@@ -90,5 +94,5 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.7);
   overflow: hidden;
-  z-index: 1;
+  z-index: 999;
 }
