--- a/src/pages/WatchLater/components/WatchLaterCard.module.css
+++ b/src/pages/WatchLater/components/WatchLaterCard.module.css
@@ -28,6 +28,7 @@
   font-size: 0.85rem;
   font-weight: 500;
   padding: 0.25rem 0 0.35rem;
+  cursor: pointer;
 }
 
 .descriptionContainer .channelName {
@@ -72,6 +73,7 @@
   padding: 1rem 0;
   font-size: 1rem;
   font-weight: 500;
+  cursor: pointer;
 }
 
 .modalCloseContainer {
@@ -82,6 +84,7 @@
   right: 0;
   background-color: rgba(0, 0, 0, 0.7);
   overflow: hidden;
+  z-index: 999;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
