--- a/src/components/Header/HeaderMobile.module.css
+++ b/src/components/Header/HeaderMobile.module.css
@@ -20,6 +20,7 @@
   cursor: pointer;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
 
 .actions input[type='search'] {
@@ -31,7 +32,7 @@
   color: black;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) {
   .container {
     display: none;
   }
