--- a/src/pages/Home/VideoListing.module.css
+++ b/src/pages/Home/VideoListing.module.css
@@ -3,6 +3,15 @@
   grid-template-columns: 1fr;
   row-gap: 2rem;
   margin-bottom: 6rem;
+  padding-bottom: 8rem;
+}
+
+@media screen and (min-width: 460px) and (max-width: 768px) {
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+    margin: 0 1rem;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) {
@@ -19,5 +28,6 @@
     column-gap: 1rem;
     margin: 2rem 1rem 2rem 14vw;
     padding: 0 1rem;
+    padding-bottom: 5rem;
   }
 }
