--- a/src/pages/Error/Error404.module.css
+++ b/src/pages/Error/Error404.module.css
@@ -28,15 +28,15 @@
   font-weight: 400;
   letter-spacing: 1.2px;
   border: 0;
-  box-shadow: 0px 3px 1px -2px RGB(0 0 0/20%), 0px 2px 2px 0px RGB(0 0 0/14%), 0px 1px 5px 0px RGB(0 0 0/12%);
+  background-color: var(--secondary-color);
   cursor: pointer;
-  color: #272727;
+  color: var(--white);
   transition: all 0.5s ease-in-out;
 }
 
 .error button:hover {
-  background-color: #d5d5d5;
-  box-shadow: 0px 2px 4px -1px RGB(0 0 0/20%), 0px 4px 5px 0px RGB(0 0 0/14%), 0px 1px 10px 0px RGB(0 0 0/12%);
+  transform: scale(1.1);
+  background-color: var(--secondary-color-dark);
 }
 
 @media screen and (min-width: 1024px) {
