--- a/src/components/Header/HeaderMobile.module.css
+++ b/src/components/Header/HeaderMobile.module.css
@@ -27,6 +27,18 @@
   align-items: center;
 }
 
+.actions button {
+  margin-left: 0.5rem;
+  cursor: pointer;
+  border: 0;
+  background-color: var(--secondary-color);
+  padding: 0.5rem 1rem;
+  border-radius: 5px;
+  color: var(--white);
+  font-weight: 300;
+  font-size: 1rem;
+}
+
 .actions input[type='search'] {
   display: none;
 }
